@@ -1,3 +1,7 @@
+2002-11-10  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* Util.py (build_cdb): Uniquify ftmp when doing cdbmake.
+
 2002-11-08  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
 	* Defaults.py (SUMMARY_HEADERS): New variable.
